# artdaq_core

./: .gitignore  CMakeLists.txt  CMakePresets.json  README
Modules/: CodeCoverage.cmake
artdaq-core/: CMakeLists.txt
artdaq-core/ArtModules/: ArtdaqCoreBuildInfo_module.cc  BuildInfo_module.hh  CMakeLists.txt  PrintBuildInfo_module.cc  pkginfo.hh
artdaq-core/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh  GetPackageInfo.cc.in  GetPackageInfo.h  GetPackageInfo.hh  GetReleaseVersion.cc.in  GetReleaseVersion.h
artdaq-core/Core/: CMakeLists.txt  ConcurrentQueue.hh  GlobalQueue.cc  GlobalQueue.hh  MonitoredQuantity.cc  MonitoredQuantity.hh  QuickVec.hh  SharedMemoryEventManager.cc  SharedMemoryEventManager.hh  SharedMemoryEventReceiver.cc  SharedMemoryEventReceiver.hh  SharedMemoryFragmentManager.cc  SharedMemoryFragmentManager.hh  SharedMemoryManager.cc  SharedMemoryManager.hh  SimpleMemoryReader.cc  SimpleMemoryReader.hh  SimpleQueueReader.cc  SimpleQueueReader.hh  StatisticsCollection.cc  StatisticsCollection.hh
artdaq-core/Data/: Artdaq_fragmentNameHelper.cc  CMakeLists.txt  ContainerFragment.hh  ContainerFragmentLoader.hh  Fragment.cc  Fragment.hh  FragmentNameHelper.hh  Fragments.hh  PackageBuildInfo.cc  PackageBuildInfo.hh  QuickVec.hh  RawEvent.cc  RawEvent.hh  RonVec.hh  classes.h  classes_def.xml  dictionarycontrol.hh
artdaq-core/Data/MissingArtDictionaries/: CMakeLists.txt  classes.h  classes_def.xml
artdaq-core/Data/detail/: ParentageMap.hh  RawFragmentHeader.hh  RawFragmentHeaderV0.hh  RawFragmentHeaderV1.hh
artdaq-core/Generators/: CMakeLists.txt  CMakeLists.txt.mrb  FragmentGenerator.hh  GeneratorMacros.hh  makeFragmentGenerator.cc  makeFragmentGenerator.hh
artdaq-core/Plugins/: ArtdaqFragmentNameHelper.hh  Artdaq_fragmentNameHelper.cc  CMakeLists.txt  FragmentGenerator.hh  FragmentNameHelper.hh  GeneratorMacros.hh  makeFragmentGenerator.cc  makeFragmentGenerator.hh
artdaq-core/Utilities/: CMakeLists.txt  CMakeLists.txt.mrb  ExceptionHandler.cc  ExceptionHandler.hh  ExceptionStackTrace.cc  ExceptionStackTrace.hh  GenFile_mfPlugin.cc  SimpleLookupPolicy.cc  SimpleLookupPolicy.h  SimpleLookupPolicy.hh  TimeUtils.cc  TimeUtils.h  TimeUtils.hh  TraceLock.hh  configureMessageFacility.cc  configureMessageFacility.hh
artdaq-core/Version/: CMakeLists.txt  GetReleaseVersion.cc.in  GetReleaseVersion.h
doc/: CMakeLists.txt  Doxyfile.in
perllib/: CMakeLists.txt
perllib/CetSkelPlugins/: CMakeLists.txt  Generator.pm
test/: CMakeLists.txt
test/Core/: CMakeLists.txt  SharedMemoryFragmentManager_t.cc  SharedMemoryManager_t.cc  SharedMemoryTestShims.hh
test/Data/: BuildInfo_t.cc  CMakeLists.txt  ContainerFragment_t.cc  FragmentNameHelper_t.cc  Fragment_t.cc  RawEvent_t.cc
test/Generators/: CMakeLists.txt  FragmentGenerator_t.cc
test/Plugins/: CMakeLists.txt  FragmentGenerator_t.cc  FragmentNameHelper_t.cc
test/Utilities/: CMakeLists.txt  ExceptionHandler_t.cc  ExceptionStackTrace_t.cc  GenFile_t.cc  SimpleLookupPolicy_t.cc  TimeUtils_t.cc  configureMessageFacility_t.cc
ups/: product_deps
